basic navbar added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar color="primary">
-  <span>FMI</span>
+  <span>FMI <mat-icon>whatshot</mat-icon> </span>
+  <div class ="spacer">
+
+  </div>
   <a mat-button>Home</a>
   <a mat-button>Campaigns</a>
-  <a mat-button>Login</a>
+  <a mat-raised-button color="accent">Login</a>
 </mat-toolbar>
