--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="mat-elevation-z5">
   <span>FMI <mat-icon>whatshot</mat-icon> </span>
   <div class ="spacer">
 
   </div>
-  <a mat-button>Home</a>
-  <a mat-button>Campaigns</a>
-  <a mat-raised-button color="accent">Login</a>
+  <a mat-button routerLink="home">Home</a>
+  <a mat-button routerLink="campaigns">Campaigns</a>
+  <a mat-raised-button color="accent" routerLink="login">Login</a>
 </mat-toolbar>
