added action buttons

--- a/src/app/campaigns/campaigns.component.html
+++ b/src/app/campaigns/campaigns.component.html
@@ -1,4 +1,8 @@
 <div class="container">
+  <div class="border">
+    <button class="btn btn-md btn-outline-primary">
+      <i class="fa fa-plus"></i>New Campaign</button>
+  </div>
   <table mdbTable hover="true">
     <thead>
     <tr>
@@ -11,6 +15,14 @@
       <td>{{ campaign.description }}</td>
       <td>{{ campaign.campaignGoal }}</td>
       <td>{{ campaign.currentAmount }}</td>
+      <td>
+        <button class="btn btn-sm btn-info">
+          <i class="fa fa-search"></i>Details</button>
+        <button class="btn btn-sm btn-warning">
+          <i class="fa fa-edit"></i>Edit</button>
+        <button class="btn btn-sm btn-danger">
+          <i class="fa fa-remove"></i>Delete</button>
+      </td>
     </tr>
     </tbody>
   </table>
