--- a/src/app/campaigns/campaigns.component.html
+++ b/src/app/campaigns/campaigns.component.html
@@ -12,9 +12,9 @@
     <tbody>
     <tr mdbTableCol *ngFor="let campaign of campaigns">
       <th scope="row">{{ campaign.id }}</th>
-      <td>{{ campaign.description }}</td>
+      <td>{{ campaign.descritpion }}</td>
       <td>{{ campaign.campaignGoal }}</td>
-      <td>{{ campaign.currentAmount }}</td>
+      <td>{{ campaign.currentAmmount }}</td>
       <td>
         <button class="btn btn-sm btn-info">
           <i class="fa fa-search"></i>Details</button>
