delete & create campaign done

--- a/src/app/campaigns/campaigns.component.html
+++ b/src/app/campaigns/campaigns.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="border">
-    <button class="btn btn-md btn-outline-primary">
-      <i class="fa fa-plus"></i>New Campaign</button>
+    <a routerLink="/campaigns/create">
+      <button class="btn btn-md btn-outline-primary">
+        <i class="fa fa-plus"></i>New Campaign</button>
+    </a>
+
   </div>
   <table mdbTable hover="true">
     <thead>
@@ -20,7 +23,7 @@
           <i class="fa fa-search"></i>Details</button>
         <button class="btn btn-sm btn-warning">
           <i class="fa fa-edit"></i>Edit</button>
-        <button class="btn btn-sm btn-danger">
+        <button class="btn btn-sm btn-danger" (click)="onDelete(campaign.id)">
           <i class="fa fa-remove"></i>Delete</button>
       </td>
     </tr>
